# Task_List

./: .env  Cargo.toml  compose.yml  config.toml  dockerfile  tasks.db
src/: database.rs  main.rs  menu.rs  read_input_user.rs  reminder.rs  task_list.rs  task_list_postgres.rs  todo_list.rs  todo_list_tests.rs
src/database/: config.rs  connections.rs  database.rs  db_types.rs  mod.rs  operations.rs  operations_sync.rs
src/interfaces/: mod.rs
src/interfaces/app/: database_web.rs  deserialization.rs  handlers.rs  mod.rs  router.rs  server.rs
src/interfaces/cli/: database_cli.rs  menu.rs  mod.rs  run_cli.rs  task_list.rs
src/old_files/: database.rs  task_list.rs
src/utils/: mod.rs  read_input_user.rs
