[package]
name = "Task_List"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
prettytable-rs = "*"
colored = "*"
chrono = "*"
job_scheduler = "1.0"
text_io = "0.1.8"
tokio = { version = "1", features = ["full"] }
postgres = "0.19.7"
dotenv = "0.15.0"
bytes = "1.6.1"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
tokio-postgres = "0.7"
env_logger = "0.10.0"
deadpool-postgres = "0.14.0"
futures = "0.3.30"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
